# amazon-bedrock-prompt-evaluation

./: .envrc.sample  .gitattributes  01_setup.sh  02_config.py  03_ai_prompt_answer_evaluator.tmpl  04_create_evaluation_prompt.py  05_prompt_eval_flow_role_policy.json  06_create_flow_role.py  07_prompt_eval_flow_defn.json  08_create_flow.py  09_prepare_flow.py  10_create_flow_version.py  11_create_flow_alias.py  12_test_flow_with_examples.py  Makefile  README.org  cleanup_resources.py  evaluate_prompts_at_scale.py  flow-simulator.org  generative_ai_advisor.py  prompt-engineering.org  prompts.dtd  prompts_dataset.jsonl  pyproject.toml  setup.py  test_evaluation_flow.py  validate_prompts.sh
flow_simulator/: bedrock_updater.py  main.py  models.py  simulator.py  utils.py  visualizer.py
flow_simulator/tests/: test_models.py  test_simulator.py  test_visualizer.py
prompts/: bad_concept_explanation_prompt.json  bad_sentiment_analysis_prompt.json  bad_summarization_prompt.json  chain_of_thought_prompt.xml  clear_specific_prompt.xml  context_provision_prompt.xml  evaluation_bad_prompt.tmpl  evaluation_good_prompt.tmpl  few_shot_learning_prompt.xml  good_concept_explanation_prompt.json  good_sentiment_analysis_prompt.json  good_summarization_prompt.json  iterative_refinement_prompt.xml  output_formatting_prompt.xml  role_based_prompt.xml  structured_prompt.xml
