[tool.poetry]
name = "amazon-bedrock-prompt-evaluation"
version = "0.1.0"
description = ""
authors = ["Jason Walsh <j@wal.sh>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.17"
botocore = "^1.35.17"
matplotlib = "^3.9.2"
files-to-prompt = "^0.3"
pytest = "^8.3.3"
flake8 = "^7.1.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]