[tool.poetry]
name = "amazon-bedrock-prompt-evaluation"
version = "0.1.0"
description = ""
authors = ["Jason Walsh <j@wal.sh>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11"
botocore = ">=1.35.17,<2.0.0"
matplotlib = "^3.9.2"
files-to-prompt = "^0.3"
pytest = "^8.3.3"
flake8 = "^7.1.1"
black = "^24.8.0"
pydantic = "^2.9.1"
langchain = "^0.2.16"
langchain-community = "^0.2.16"
click = "^8.1.7"
boto3 = "^1.35.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]